<resources>
    <string name="app_name">Pense Bête</string>
    <string name="no_event_message">Aucun évènement prévu pour aujourd\'hui</string> <!-- message à afficher si la liste de post-it est vide -->
    <string name="navigation_right_description">navigation vers le jour suivant</string>
    <string name="navigation_left_description">navigation vers le jour précédent</string>
    <string name="confirmation">Terminé</string>
    <string name="forgotten">Oublié</string>

    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>


    <string name="add_title_input"><b>Titre</b></string>
    <string name="add_subtitle_input"><b>Sous Titre</b></string>
    <string name="add_information_input"><b>Informations</b></string>
    <string name="add_date_input"><b>Date (JJ/MM/AAAA)</b></string>
    <string name="add_hour_input"><b>Heure (HH:MM)</b></string>
    <string name="add_duration_input"><b>Durée</b></string>
    <string name="add_color_input"><b>Couleur</b></string>

    <string-array name="police_size">
        <item> Police : Grande </item>
        <item> Police : Moyenne </item>
        <item> Police : Petite </item>

    </string-array>

    <string-array name="event_types">
        <item>RDV</item>
        <item>Medicaments</item>
        <item>Anniversaire</item>
        <item>Voeux</item>
        <item>Autres</item>

    </string-array>

</resources>