<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <EditText
        android:id="@+id/title"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:hint="@string/add_title_input"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColorHint="@color/black"
        />
    <EditText
        android:id="@+id/subtitle"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:hint="@string/add_subtitle_input"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColorHint="@color/black"
        />
    <EditText
        android:id="@+id/informations"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:hint="@string/add_information_input"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColorHint="@color/black"
        />
    <EditText
        android:id="@+id/date"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:hint="@string/add_date_input"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColorHint="@color/black"
        android:autofillHints="creditCardExpirationDate"
        />
    <EditText
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:hint="@string/add_hour_input"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColorHint="@color/black"
        />
    <EditText
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:hint="@string/add_duration_input"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColorHint="@color/black"
        />
    <EditText
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:hint="@string/add_color_input"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColorHint="@color/black"
        />

    <Button
        android:id="@+id/add"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/cardview_dark_background"
        android:text="CONFIRMER"
        android:textSize="24dp"/>
</LinearLayout>
