<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/title"
            android:layout_height="70dp"
            android:layout_width="match_parent"
            android:hint="@string/add_title_input"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/black"
            />
        <EditText
            android:id="@+id/subtitle"
            android:layout_height="70dp"
            android:layout_width="match_parent"
            android:hint="@string/add_subtitle_input"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/black"
            />
        <EditText
            android:id="@+id/informations"
            android:layout_height="70dp"
            android:layout_width="match_parent"
            android:hint="@string/add_information_input"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/black"
            />
        <EditText
            android:id="@+id/date"
            android:layout_height="70dp"
            android:layout_width="match_parent"
            android:hint="@string/add_date_input"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/black"
            android:inputType="date"
            />
        <EditText
            android:id="@+id/heure"
            android:layout_height="70dp"
            android:layout_width="match_parent"
            android:hint="@string/add_hour_input"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:inputType="datetime"
            android:textColorHint="@color/black"
            />
        <EditText
            android:layout_height="70dp"
            android:layout_width="match_parent"
            android:hint="@string/add_duration_input"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/black"
            />
        <!--
        <EditText
            android:layout_height="70dp"
            android:layout_width="match_parent"
            android:hint="@string/add_color_input"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/black"
            />
            -->
        <Spinner
            android:id="@+id/type"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:entries="@array/event_types"
            app:layout_constraintStart_toStartOf="@id/guideline_marge_9"
            app:layout_constraintTop_toTopOf="@id/guideline_marge_5"
            />
    </LinearLayout>

    <Button
        android:id="@+id/add"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:background="@color/cardview_dark_background"
        android:text="CONFIRMER"
        android:textSize="24dp"

        app:layout_constraintTop_toTopOf="@id/guideline_marge_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_marge_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>
